logs/Slang/chapter-8/8.26.2--implements_extends.sv.log
name: implements_extends
description: class both implementing and extending
should_fail: 0
tags: 8.26.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.2--implements_extends.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.2--implements_extends.sv:8:2: error: language feature not yet supported
	interface class ihello;
	^~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.2--implements_extends.sv:12:2: error: language feature not yet supported
	interface class itest;
	^~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.2--implements_extends.sv:16:2: error: language feature not yet supported
	class base;
	^~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.2--implements_extends.sv:22:2: error: language feature not yet supported
	class Hello extends base implements ihello, itest;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.2--implements_extends.sv:31:2: error: use of undeclared identifier 'Hello'
	Hello obj;
	^~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.2--implements_extends.sv:34:9: error: language feature not yet supported
		obj = new;
		      ^~~
